# frostmourne_tunes

./: .gitignore  .pre-commit-config.yaml  README.md  go.mod  main.py  pre-commit-req.txt  pyproject.toml  requirements.txt  setup.bat
cmd/frostmourne_tunes/: main.go
configs/: example.env
internal/utils/: misc.go
